--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         
-        window.location.href = "./build/index.html"; 
+        window.location.href = "./build/index.php"; 
     </script>
 </body>
 </html>
